--- a/main.scss
+++ b/main.scss
@@ -7,7 +7,7 @@ $primaryWhite:#fafafa;
     justify-content: space-evenly;
     align-content: center;
 }
-@include flexContainer
+
 *{
     box-sizing: border-box;
     margin: 0;
@@ -99,12 +99,9 @@ hr{
     }
 } 
 .tools {
-   border-spacing: 20px;
+    border-spacing: 20px;
     margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: center;
+    @include flexContainer;
     width: 80vw;
     img{
         padding: 10px 10px 10px;
@@ -129,18 +126,22 @@ hr{
     }      
 }
 .projects {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    align-content: center;
+    @include flexContainer;
+    
+
 }
 .item{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin: 30px;
-    img{
-        width: 200px;
-    }
 }
 
+.input_container{
+    width: 600px;
+    background-color:tan ;
+    padding: 30px;
+    border-radius: 15px;
+    box-shadow: 0 0 25 px rgba(0,0,0,0.3);
+    border: 10px solid #41b9ff;
+}
 
