--- a/main.scss
+++ b/main.scss
@@ -1,5 +1,8 @@
 $primarycolor:#a27aac;
 $primaryWhite:#fafafa;
+$darkpurple: #8d3ae5;
+$lightyellow:#feeeb5;
+$lightpurple:#f3dafc;
 
 @mixin flexContainer(){
     display: flex;
@@ -87,7 +90,7 @@ hr{
     padding-bottom: 50px;
     padding-top: 50px;
     text-align: center;
-    color: #8d3ae5;
+    color: $primarycolor;
     
 }
 .aboutMe{
@@ -134,14 +137,71 @@ hr{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin: 30px;
+    img{
+        padding: 30px 30px 0;
+    }
+}
+.item figcaption{
+    text-align: center; color: $primarycolor; 
+    p{
+        font-size: 11px;
+        font-weight: light;
+    }
 }
 
-.input_container{
-    width: 600px;
-    background-color:tan ;
-    padding: 30px;
-    border-radius: 15px;
-    box-shadow: 0 0 25 px rgba(0,0,0,0.3);
-    border: 10px solid #41b9ff;
+
+
+.contact-form{
+    background:$lightpurple;
+    padding: 25px;
+    border-radius: 10px;
+    width: 300px;
+    margin: 30px auto;
+  }
+  h1{
+    text-align: center;
+    margin-top: 0px;
+    margin-bottom: 40px;
+    color: #5d5d57;
+  }
+  .form-group{
+    margin-bottom: 20px;
+  }
+  label{
+    display: block;
+    font-weight: bold;
+    margin-bottom: 5px;
+    color: #555;
+    font-size: 14px;
+  }
+  input, textarea{
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    font-size: 17px;
+    box-sizing: border-box;
+    resize: vertical;
+  }
+  button{
+    display: block;
+    margin: auto;
+    background: $lightyellow;
+    color: $primarycolor;
+    border: none;
+    padding: 10px 20px;
+    border-radius: 5px;
+    font-size: 16px;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.5);
+    cursor: pointer;
+  } 
+button:hover {
+     background: #fbf084;
+    }
+  
+
+.form-group [placeholder]{
+    font-size: 11px;
 }
 
