--- a/main.css
+++ b/main.css
@@ -136,9 +136,13 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 30px;
+  text-decoration: none;
 }
 .item img {
   padding: 30px 30px 0;
+}
+.item a {
+  text-decoration: none;
 }
 
 .item figcaption {
