--- a/main.scss
+++ b/main.scss
@@ -106,6 +106,7 @@ hr{
     margin: 0 auto;
     @include flexContainer;
     width: 80vw;
+   
     img{
         padding: 10px 10px 10px;
         width: 80px;    
@@ -137,8 +138,12 @@ hr{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin: 30px;
+    text-decoration: none;
     img{
         padding: 30px 30px 0;
+    }
+    a{
+        text-decoration: none;
     }
 }
 .item figcaption{
