--- a/main.css
+++ b/main.css
@@ -16,7 +16,7 @@ body {
 }
 .homepage a {
   text-decoration: none;
-  color: #a27aac;
+  color: #333;
 }
 .homepage li {
   padding: 15px 0;
@@ -82,7 +82,7 @@ hr {
   padding-bottom: 50px;
   padding-top: 50px;
   text-align: center;
-  color: #a27aac;
+  color: #333;
 }
 
 .aboutMe {
@@ -137,6 +137,7 @@ hr {
   transition: 0.3s;
   margin: 30px;
   text-decoration: none;
+  border-radius: 5%;
 }
 .item img {
   padding: 30px 30px 0;
@@ -147,7 +148,7 @@ hr {
 
 .item figcaption {
   text-align: center;
-  color: #a27aac;
+  color: #333;
 }
 .item figcaption p {
   font-size: 11px;
@@ -196,7 +197,7 @@ button {
   display: block;
   margin: auto;
   background: #feeeb5;
-  color: #a27aac;
+  color: #333;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
