--- a/main.css
+++ b/main.css
@@ -22,6 +22,7 @@ body {
   padding: 15px 0;
   text-align: center;
   font-size: 0.8rem;
+  margin: 10px 0;
 }
 .homepage li:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -62,11 +63,8 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 30px;
-  border-radius: 50%;
+  border-radius: 5%;
   padding: 15px;
-}
-.card :hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .container {
