--- a/main.scss
+++ b/main.scss
@@ -33,6 +33,7 @@ body{
         padding:15px 0;
         text-align: center;
         font-size: .8rem;
+        margin: 10px 0;
     }
     li:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -48,6 +49,7 @@ body{
     background-color:$primaryWhite;
     height:100vh;
     position:fixed;
+
     img{
         margin: -10px;
     }
@@ -73,11 +75,9 @@ hr{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin: 30px;
-    border-radius: 50%;
+    border-radius: 5%;
     padding: 15px;
-    :hover {
-        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
-    }
+    
 }
 .container{
     padding:40px 100px ;
@@ -107,6 +107,7 @@ hr{
     margin: 0 auto;
     @include flexContainer;
     width: 80vw;
+    
    
     img{
         padding: 10px 10px 10px;
