--- a/Email-Developer-Portfolio/main.scss
+++ b/Email-Developer-Portfolio/main.scss
@@ -1,4 +1,4 @@
-$primarycolor:#333;
+$primarycolor:#a27aac;
 $primaryWhite:#fafafa;
 $darkpurple: #8d3ae5;
 $lightyellow:#feeeb5;
@@ -33,7 +33,6 @@ body{
         padding:15px 0;
         text-align: center;
         font-size: .8rem;
-        margin: 10px 0;
     }
     li:hover {
         box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
@@ -49,12 +48,10 @@ body{
     background-color:$primaryWhite;
     height:100vh;
     position:fixed;
-
     img{
         margin: -10px;
     }
 }
-
 
 .header{
     padding-top:300px;
@@ -75,9 +72,11 @@ hr{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin: 30px;
-    border-radius: 5%;
+    border-radius: 50%;
     padding: 15px;
-    
+    :hover {
+        box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
+    }
 }
 .container{
     padding:40px 100px ;
@@ -107,8 +106,6 @@ hr{
     margin: 0 auto;
     @include flexContainer;
     width: 80vw;
-    
-   
     img{
         padding: 10px 10px 10px;
         width: 80px;    
@@ -140,14 +137,8 @@ hr{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
     margin: 30px;
-    text-decoration: none;
-    border-radius: 5%;
-
     img{
         padding: 30px 30px 0;
-    }
-    a{
-        text-decoration: none;
     }
 }
 .item figcaption{
@@ -213,5 +204,4 @@ button:hover {
 .form-group [placeholder]{
     font-size: 11px;
 }
-
 
