--- a/Email-Developer-Portfolio/main.css
+++ b/Email-Developer-Portfolio/main.css
@@ -1,7 +1,10 @@
-body {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -13,12 +16,13 @@ body {
 }
 .homepage a {
   text-decoration: none;
-  color: #a27aac;
+  color: #333;
 }
 .homepage li {
   padding: 15px 0;
   text-align: center;
   font-size: 0.8rem;
+  margin: 10px 0;
 }
 .homepage li:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -59,11 +63,8 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 30px;
-  border-radius: 50%;
+  border-radius: 5%;
   padding: 15px;
-}
-.card :hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .container {
@@ -79,7 +80,7 @@ hr {
   padding-bottom: 50px;
   padding-top: 50px;
   text-align: center;
-  color: #a27aac;
+  color: #333;
 }
 
 .aboutMe {
@@ -133,14 +134,19 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 30px;
+  text-decoration: none;
+  border-radius: 5%;
 }
 .item img {
   padding: 30px 30px 0;
 }
+.item a {
+  text-decoration: none;
+}
 
 .item figcaption {
   text-align: center;
-  color: #a27aac;
+  color: #333;
 }
 .item figcaption p {
   font-size: 11px;
@@ -189,7 +195,7 @@ button {
   display: block;
   margin: auto;
   background: #feeeb5;
-  color: #a27aac;
+  color: #333;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
