--- a/Email-Developer-Portfolio/main.css
+++ b/Email-Developer-Portfolio/main.css
@@ -1,10 +1,7 @@
-* {
+body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
-
-body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -16,13 +13,12 @@ body {
 }
 .homepage a {
   text-decoration: none;
-  color: #333;
+  color: #a27aac;
 }
 .homepage li {
   padding: 15px 0;
   text-align: center;
   font-size: 0.8rem;
-  margin: 10px 0;
 }
 .homepage li:hover {
   box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
@@ -63,8 +59,11 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 30px;
-  border-radius: 5%;
+  border-radius: 50%;
   padding: 15px;
+}
+.card :hover {
+  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
 
 .container {
@@ -80,7 +79,7 @@ hr {
   padding-bottom: 50px;
   padding-top: 50px;
   text-align: center;
-  color: #333;
+  color: #a27aac;
 }
 
 .aboutMe {
@@ -134,19 +133,14 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 30px;
-  text-decoration: none;
-  border-radius: 5%;
 }
 .item img {
   padding: 30px 30px 0;
 }
-.item a {
-  text-decoration: none;
-}
 
 .item figcaption {
   text-align: center;
-  color: #333;
+  color: #a27aac;
 }
 .item figcaption p {
   font-size: 11px;
@@ -195,7 +189,7 @@ button {
   display: block;
   margin: auto;
   background: #feeeb5;
-  color: #333;
+  color: #a27aac;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
