--- a/Email-Developer-Portfolio/main.css
+++ b/Email-Developer-Portfolio/main.css
@@ -1,7 +1,10 @@
-body {
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -13,7 +16,7 @@ body {
 }
 .homepage a {
   text-decoration: none;
-  color: #a27aac;
+  color: #333;
 }
 .homepage li {
   padding: 15px 0;
@@ -34,7 +37,10 @@ body {
   position: fixed;
 }
 .sidebar img {
-  margin: -10px;
+  margin: 0 -10px;
+}
+.sidebar li {
+  padding: 20px 0;
 }
 
 .header {
@@ -61,9 +67,7 @@ hr {
   margin: 30px;
   border-radius: 50%;
   padding: 15px;
-}
-.card :hover {
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+  border-radius: 10%;
 }
 
 .container {
@@ -79,7 +83,7 @@ hr {
   padding-bottom: 50px;
   padding-top: 50px;
   text-align: center;
-  color: #a27aac;
+  color: #333;
 }
 
 .aboutMe {
@@ -133,6 +137,7 @@ hr {
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
   transition: 0.3s;
   margin: 30px;
+  border-radius: 5%;
 }
 .item img {
   padding: 30px 30px 0;
@@ -140,7 +145,7 @@ hr {
 
 .item figcaption {
   text-align: center;
-  color: #a27aac;
+  color: #333;
 }
 .item figcaption p {
   font-size: 11px;
@@ -189,7 +194,7 @@ button {
   display: block;
   margin: auto;
   background: #feeeb5;
-  color: #a27aac;
+  color: #333;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
