--- a/ecomerce-project/style.css
+++ b/ecomerce-project/style.css
@@ -34,40 +34,45 @@ p{
 body{
     width: 100%;
 }
+
 /*header*/
 
-.header{
+#header{
     display: flex;
     align-items: center;
     justify-content: space-between;
     padding: 20px 80px;
     background-color:#e3e6f3;
-    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.06);
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.09);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
 }
-.navbar{
+#navbar{
     display: flex;
     align-items: center;
     justify-content:center;
 }
-.navbar li{
+#navbar li{
     list-style: none;
     padding: 0 20px;
     position: relative;
 
 }
-.navbar li a {
+#navbar li a {
     text-decoration: none;
     font-size: 16px;
     font-weight: 600px;
     color:#1a1a1a ;
     transition: 0.3s ease;
 }
-.navbar li a:hover,
-.navbar li a.active{
+#navbar li a:hover,
+#navbar li a.active{
     color: #088178;
 }
-.navbar li a.active::after,
-.navbar li a:hover::after{
+#navbar li a.active::after,
+#navbar li a:hover::after{
     content:'';
     width: 30%;
     height: 2px;
@@ -75,4 +80,36 @@ body{
     position: absolute;
     bottom:-4px ;
     left: 20px;
+}
+/*Home Page*/
+
+#hero{
+    background-image: url('imgs/hero4.png');
+    height: 90vh;
+    width: 100%;
+    background-position: top 25% right 0;
+    background-size: cover;
+    padding: 0 80px;
+    display: flex;
+    flex-direction: column;
+    align-items:flex-start ;
+    justify-content: center;
+
+}
+#hero h4{
+    padding-bottom: 15px;
+}
+#hero h1{
+    color: #088178;
+}
+#hero button{
+    background-image: url('imgs/button.png');
+    background-color: transparent;
+    color: #088178;
+    border: 0;
+    padding: 14px 80px 14px 65px;
+    background-repeat: no-repeat;
+    cursor: pointer;
+    font-size: 15px;
+    font-weight: 700;
 }
