--- a/ecomerce-project/style.css
+++ b/ecomerce-project/style.css
@@ -47,6 +47,18 @@ button.normal {
     transition:0.2s ;
 
 }
+button.white {
+    font-size: 13px;
+    font-weight: 600;
+    padding: 11px 18px;
+    color: #fff;
+    background-color:transparent;
+    cursor: pointer;
+    border: 1px solid #fff;
+    outline: none;
+    transition:0.2s ;
+
+}
 body{
     width: 100%;
 }
@@ -285,3 +297,128 @@ background-color: #cdd4f8;
     background-color:#088178 ;      
     color:#fff;
 }
+#sm-banner {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    
+}
+#sm-banner .banner-box{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    background-image: url('imgs/banner/b17.jpg');
+    min-width: 580px;
+    height: 50vh;
+    background-size: cover;
+    background-position: center;
+    padding: 30px;
+}
+#sm-banner .banner-box2{
+   background-image: url('imgs/banner/b10.jpg'); 
+}
+#sm-banner h4{
+    color: #fff;
+    font-size: 20px;
+    font-weight: 300;
+}
+#sm-banner h2{
+    font-size:28px;
+    font-weight: 800;
+}
+#sm-banner span{
+    color: #fff;
+    font-size: 14px;
+    font-weight: 500;
+    padding:15px ;
+}
+#sm-banner .banner-box:hover button{
+    background-color:#088178 ;      
+    color:#fff;
+    border: none;
+}
+#banner3{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    padding:0 80px;
+}
+#banner3 .banner-box{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: center;
+    background-image: url('imgs/banner/b7.jpg');
+    min-width: 30%;
+    height: 30vh;
+    background-size: cover;
+    background-position: center;
+    padding: 20px;
+    margin-bottom: 20px;
+}
+#banner3 .banner-box2{
+    background-image: url('imgs/banner/b4.jpg');
+
+}
+#banner3 .banner-box3{
+background-image: url('imgs/banner/b18.jpg');
+}
+#banner3 h2{
+    color: #fff;
+    font-weight: 900;
+    font-size: 22px;
+
+}
+#banner3 h2{
+    color: #ec544e;
+    font-weight: 800;
+    font-size: 15px;
+    
+}
+/* newsletter sign up */
+
+#newsletter{
+ display: flex;
+ justify-content: space-between;
+ flex-wrap: wrap;
+ align-items: center;
+ background-image: url('imgs/banner/b14.png'); 
+ background-repeat: no-repeat;
+ background-position: 20% 30%;
+ background-color: #041e42;  
+}
+#newsletter h4{
+    font-size: 32px;
+    font-weight: 700;
+    color: #fff;
+}
+#newsletter p{
+    font-size: 14px;
+    font-weight: 600;
+    color: #818ea0;
+}
+#newsletter p span {
+    color: #ffbd27;
+}
+#newsletter  input{
+    height: 3.125rem;
+    padding: 0 1.25rem;
+    font-size: 14px;
+    width: 100%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    outline: none;
+}
+#newsletter button{
+    background-color: #088178;
+    color: #fff;
+    white-space: nowrap;
+
+}
+
+#newsletter .form{
+    display: flex;
+    width: 40%;
+}
+
