--- a/ecomerce-project/style.css
+++ b/ecomerce-project/style.css
@@ -409,16 +409,82 @@ background-image: url('imgs/banner/b18.jpg');
     border: 1px solid transparent;
     border-radius: 4px;
     outline: none;
+    border-top-right-radius: 0 ;
+    border-bottom-right-radius: 0 ;
+
 }
 #newsletter button{
     background-color: #088178;
     color: #fff;
     white-space: nowrap;
+    border-top-left-radius: 0 ;
+    border-bottom-left-radius: 0 ;
 
 }
 
 #newsletter .form{
     display: flex;
     width: 40%;
+}
+
+
+/* footer */
+
+footer{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+footer .col{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    margin-bottom: 20px;
+}
+footer .logo{
+    margin-bottom: 30px;
+}
+footer h4{
+    font-size: 14px;
+    padding-bottom: 20px;
+}
+footer p{
+    font-size: 13px;
+    margin: 0 0 8px 0;
+}
+footer a{
+    font-size: 13px;
+    text-decoration: none;
+    margin-bottom: 10px;   
+    color: #222;
+}
+footer .follow{
+    margin-top:20px
+}
+footer .follow{
+    margin-top:20px
+}
+footer .follow i{
+    color:#465b52 ;
+    padding-right: 4px;
+    cursor: pointer;
+}
+footer .install .row img{
+    border: 1px solid #088178;
+    border-radius:6px
+
+}
+footer .install img{
+    margin:10px 0 15px 0;
+}
+footer .follow i:hover,
+footer a:hover{
+    color:#088178 ;
+}
+.copyright{
+    width: 100%;
+    text-align: center;
 }
 
