--- a/ecomerce-project/style.css
+++ b/ecomerce-project/style.css
@@ -572,6 +572,81 @@ footer a:hover{
     text-align: center;
 }
 
+/* blog page */
+.blogheader{
+    background-image: url(imgs/banner/b19.jpg);
+    height: 50vh;
+    width: 100%;
+    background-size: cover;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    flex-direction: column;    
+}
+.blogheader h2{
+    margin-top: 30px;
+}
+#blog {
+    padding: 150px 150px 0 150px;
+}
+#blog .blog-box{
+    display: flex;
+    align-items: center;
+    width: 100%;
+    position: relative;
+    padding-bottom: 90px;
+
+}
+#blog .blog-img{
+    width: 50%;
+    margin-right: 40px;
+}
+#blog img{
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+
+}
+#blog .blog-details{
+    width: 50%;
+}
+#blog .blog-details a{
+    text-decoration: none;
+    font-size: 11px;
+    color: #222;
+    font-weight: 700;
+    position: relative;
+    transition: 0.3s;
+
+}
+#blog .blog-details a::after{
+    content: '';
+    width: 50px;
+    height: 1px;
+    background-color: #000;
+    position: absolute;
+    top: 4px;
+    right: -60px;
+}
+#blog .blog-details a:hover{
+    color:#088178;
+
+}
+#blog .blog-details a:hover::after{
+    background-color: #088178;
+}
+#blog .blog-box h1{
+    position: absolute;
+    top: -40px;
+    left: 0;
+    font-size: 70px;
+    font-weight: 700;
+    color: #c9cbce;
+    z-index:-9;
+}
+
+
+
 /* Media queries */
 @media (max-width:799px) {
     .section-p1{
@@ -715,6 +790,25 @@ footer a:hover{
         width: 100%;
     }
     #prodetails .single-row-details {
+        width: 100%;
+    }
+
+    /* blog page */
+    #blog .blog-box {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+
+    }
+    #blog{
+        padding: 100px 20px 0 20px;
+    }
+    #blog .blog-img {
+        width: 100%;
+        margin-right: 0px;
+        margin-bottom: 30px;
+    }
+    #blog .blog-details {
         width: 100%;
     }
 }
