--- a/ecomerce-project/style.css
+++ b/ecomerce-project/style.css
@@ -102,6 +102,7 @@ body{
     color: #088178;
 }
 #navbar li a.active::after,
+#navbar li.active::after,
 #navbar li a:hover::after{
     content:'';
     width: 30%;
@@ -777,6 +778,115 @@ color: #fff;
     font-weight: 300;
 }
 
+/* cart page */
+
+#cart table{
+    width: 100%;
+    
+    table-layout: fixed;
+    
+}
+#cart table img{
+    width: 70px;
+}
+#cart table td:nth-child(1){
+    width: 100%;
+   max-width:100px;
+    text-align: center;
+}
+#cart table td:nth-child(2){
+    width: 100%;
+    max-width:150px;
+    text-align: center;
+}
+#cart table td:nth-child(3){
+    width: 100%;
+    max-width:250px;
+    text-align: center;
+}
+#cart table td:nth-child(4),
+#cart table td:nth-child(5),
+#cart table td:nth-child(6){
+    width: 100%;
+    max-width:150px;
+    text-align: center;
+}
+#cart table td:nth-child(5) input{
+    width: 70px;
+    padding: 10px 5px 10px 15px;
+}
+#cart table thead{
+    border: 1px solid #e2e9e1;
+    border-left: none;
+    border-right: none;
+}
+#cart table thead td{
+    font-weight: 700;
+    text-transform: uppercase;
+    padding: 18px 0;
+    font-size: 13px;
+}
+#cart table tbody tr td{
+    padding-top: 15px;
+}
+#cart table tbody td{
+    font-size: 13px;
+}
+#cartadd{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    position: relative;
+}
+#coupon{
+ width: 50%;
+ margin-bottom: 30px;
+ padding-right: 50px;
+}
+#coupon h3{
+    padding-bottom: 15px;
+}
+#coupon div{
+ display: flex;
+}
+
+#coupon input{
+    outline: none;
+    width: 100%;
+    margin-right: 10px;
+    border: 1px solid #e2e9e1;
+    
+}
+#coupon button{
+    padding: 12px 20px;
+}
+#subtotal {
+    width: 50%;
+    margin-bottom: 30px;
+    padding: 30px;
+    border: 1px solid #e2e9e1;
+    
+}
+#subtotal table{
+    border-collapse: collapse;
+    width: 100%;
+    margin-bottom: 20px;
+}
+#subtotal table td{
+    width: 50%;
+    border-style: solid;
+    border: 1px solid #e2e9e1;
+    padding: 10px;    
+    font-size: 13px;
+}
+#subtotal h3{
+    padding-bottom: 20px;
+}
+#checkout{
+    position: absolute;
+    top: 300px;
+    right: 100px;
+}
 
 
 /* Media queries */
@@ -859,6 +969,9 @@ color: #fff;
     }
     #newsletter .form{
         width: 70%;
+    }
+    .fa-cart-shopping:before, .fa-shopping-cart:before {
+        content: "";
     }
 }
 @media (max-width:477px) {
@@ -1005,6 +1118,35 @@ color: #fff;
         text-align: center;
         margin-right: auto;
         margin-left: auto;
+    }
+    /* shopppingcart page */
+    #cart table img {
+        width: 40px;
+    }
+    #cart table td:nth-child(5) input {
+        width: 40px;
+    }
+    #cart table td:nth-child(4), 
+    #cart table td:nth-child(5),
+     #cart table td:nth-child(6) {
+        padding-left: 10px;
+    }
+    
+    #cartadd {
+        flex-direction: column;
+    }
+    #coupon {
+        width: 100%;
+    }
+    #checkout {
+        top: 400px;
+    }
+    #subtotal {
+        width: 100%;
+       
+    }
+    #cart table thead td {
+        font-size: 12px;
     }
 }
 
