--- a/ecomerce-project/style.css
+++ b/ecomerce-project/style.css
@@ -83,6 +83,7 @@ body{
     display: flex;
     align-items: center;
     justify-content:center;
+    position: relative;
 }
 #navbar li{
     list-style: none;
@@ -111,6 +112,16 @@ body{
     position: absolute;
     bottom:-4px ;
     left: 20px;
+}
+#navbar span{
+    font-size: 8px;
+    background-color: rgb(202, 107, 107);
+    color: #fff;
+    padding: 5px ;
+    border-radius: 50%;
+    position: absolute;
+    top: 6px;
+    left: 96%;
 }
 #mobile{
     display:none;
@@ -919,11 +930,21 @@ color: #fff;
         display: flex;
         align-items: center;
     }
+    
    #mobile i{
     color: #1a1a1a;
     font-size: 24px;
     padding-left: 20px;
    }
+   #mobile span{
+    font-size: 8px;
+    background-color: rgb(202, 107, 107);
+    color: #fff;
+    padding: 4px ;
+    border-radius: 50%;
+    margin-top:20px;
+    
+}
    #close{
     display: initial;
     position: absolute;
@@ -973,6 +994,9 @@ color: #fff;
     .fa-cart-shopping:before, .fa-shopping-cart:before {
         content: "";
     }
+    #navbar span {
+       display: none;
+    }
 }
 @media (max-width:477px) {
     .section-p1{
@@ -986,6 +1010,10 @@ color: #fff;
     }
     h1{
        font-size: 38px; 
+    }
+    #mobile span{
+        top: 41px;
+        left: 80%;
     }
     #hero{
         background-position: 55%;
