--- a/Email-Developer-Portfolio/main.scss
+++ b/Email-Developer-Portfolio/main.scss
@@ -132,9 +132,12 @@ hr{
 }
 .projects {
     @include flexContainer;
+    a{
+        text-decoration: none;
     
-
+    }
 }
+
 .item{
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
     transition: 0.3s;
@@ -144,14 +147,18 @@ hr{
     img{
         padding: 30px 30px 0;
     }
+    
 }
 .item figcaption{
     text-align: center; color: $primarycolor; 
     p{
         font-size: 11px;
         font-weight: light;
+        text-decoration: none;
     }
+    
 }
+. 
 
 
 
