chenged home font

--- a/developerPortfolio/main.css
+++ b/developerPortfolio/main.css
@@ -70,14 +70,11 @@ body {
   color: white;
   font-size: 3em;
   margin: 0;
-  -webkit-text-stroke: 1.5px #222;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
+  font-family: Georgia, "Times New Roman", Times, serif;
 }
 .header h4 {
   font-size: 1.5em;
   margin: 0;
-  -webkit-text-stroke: 1px #222;
-  font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 
 hr {
