--- a/developerPortfolio/main.scss
+++ b/developerPortfolio/main.scss
@@ -82,13 +82,10 @@ body{
     color: white; 
     font-size: 3em; 
     margin: 0; 
-    -webkit-text-stroke: 1.5px #222;
-     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+     font-family:Georgia, 'Times New Roman', Times, serif;
    }h4{
     font-size: 1.5em; 
     margin: 0; 
-    -webkit-text-stroke: 1px #222;
-    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 
    }
 }
