--- a/developerPortfolio/main.css
+++ b/developerPortfolio/main.css
@@ -24,14 +24,14 @@ body {
 }
 
 .homepage {
-  background-image: url(imgs/background2.jpg);
+  background-image: url(imgs/hero.png);
+  background-size: 500px;
   background-repeat: no-repeat;
-  background-size: 100vw s;
-  background-position: center;
+  background-position: right;
 }
 .homepage a {
   text-decoration: none;
-  color: #333;
+  color: #283618;
 }
 .homepage li {
   padding: 15px 0;
@@ -47,7 +47,7 @@ body {
 }
 
 .sidebar {
-  background-color: #fafafa;
+  background-color: #f5ebe0;
   height: 100vh;
   position: fixed;
 }
@@ -55,20 +55,24 @@ body {
   margin: 0 -10px;
 }
 .sidebar li {
+  color: #000814;
   padding: 20px 0;
+  font-weight: 500;
 }
 
 .header {
   padding-top: 25%;
   margin: auto;
-  color: #fafafa;
+  color: #606c38;
   text-align: center;
+  margin-right: 25%;
   height: 100vh;
+  opacity: 1;
   font-family: Impact, Haettenschweiler, "Arial Narrow Bold", sans-serif;
 }
 .header h1 {
-  color: white;
-  font-size: 3em;
+  color: #606c38;
+  font-size: 5rem;
   margin: 0;
   font-family: Georgia, "Times New Roman", Times, serif;
 }
@@ -183,7 +187,7 @@ hr {
 }
 
 .contact-form {
-  background: #f3dafc;
+  background: #f5ebe0;
   padding: 25px;
   border-radius: 10px;
   width: 300px;
@@ -194,7 +198,7 @@ h1 {
   text-align: center;
   margin-top: 0px;
   margin-bottom: 40px;
-  color: #5d5d57;
+  color: #606c38;
 }
 
 .form-group {
@@ -223,8 +227,8 @@ input, textarea {
 button {
   display: block;
   margin: auto;
-  background: #feeeb5;
-  color: #333;
+  background: #606c38;
+  color: #fefae0;
   border: none;
   padding: 10px 20px;
   border-radius: 5px;
